create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4004,22 +4004,22 @@ body {
   display: block;
   text-align: center;
 }
-.cid-r8nxxamz4L {
+.cid-r8sAKvNv2J {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #2e2e2e;
 }
-.cid-r8nxxamz4L .row-links {
+.cid-r8sAKvNv2J .row-links {
   width: 100%;
   justify-content: center;
   -webkit-justify-content: center;
 }
-.cid-r8nxxamz4L .social-row {
+.cid-r8sAKvNv2J .social-row {
   width: 100%;
   justify-content: center;
   -webkit-justify-content: center;
 }
-.cid-r8nxxamz4L .media-container-row {
+.cid-r8sAKvNv2J .media-container-row {
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -4027,7 +4027,7 @@ body {
   -webkit-justify-content: center;
   -webkit-align-items: center;
 }
-.cid-r8nxxamz4L .media-container-row .foot-menu {
+.cid-r8sAKvNv2J .media-container-row .foot-menu {
   list-style: none;
   display: -webkit-flex;
   justify-content: center;
@@ -4037,13 +4037,13 @@ body {
   -webkit-justify-content: center;
   -webkit-flex-wrap: wrap;
 }
-.cid-r8nxxamz4L .media-container-row .foot-menu li {
+.cid-r8sAKvNv2J .media-container-row .foot-menu li {
   padding: 0 1rem 1rem 1rem;
 }
-.cid-r8nxxamz4L .media-container-row .foot-menu li p {
+.cid-r8sAKvNv2J .media-container-row .foot-menu li p {
   margin: 0;
 }
-.cid-r8nxxamz4L .media-container-row .social-list {
+.cid-r8sAKvNv2J .media-container-row .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -4053,33 +4053,33 @@ body {
   -webkit-justify-content: flex-end;
   -webkit-flex-wrap: wrap;
 }
-.cid-r8nxxamz4L .media-container-row .social-list .mbr-iconfont-social {
+.cid-r8sAKvNv2J .media-container-row .social-list .mbr-iconfont-social {
   font-size: 1.5rem;
   color: #ffffff;
 }
-.cid-r8nxxamz4L .media-container-row .social-list .soc-item {
+.cid-r8sAKvNv2J .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-r8nxxamz4L .media-container-row .social-list a {
+.cid-r8sAKvNv2J .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-r8nxxamz4L .media-container-row .social-list a:hover {
+.cid-r8sAKvNv2J .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-r8nxxamz4L .media-container-row .social-list {
+  .cid-r8sAKvNv2J .media-container-row .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
 }
-.cid-r8nxxamz4L .media-container-row .row-copirayt {
+.cid-r8sAKvNv2J .media-container-row .row-copirayt {
   word-break: break-word;
   width: 100%;
 }
-.cid-r8nxxamz4L .media-container-row .row-copirayt p {
+.cid-r8sAKvNv2J .media-container-row .row-copirayt p {
   width: 100%;
 }
 .cid-qTkzRZLJNu .navbar {
